cancel v2023.4.2, inform user about some JetBrains issues affecting this plugin

--- a/src/main/resources/ExtraIconsI18n_zh.properties
+++ b/src/main/resources/ExtraIconsI18n_zh.properties
@@ -148,3 +148,9 @@ uitype.selector.prefer.old=\u603B\u662F\u559C\u6B22\u8001\u7684UI\u56FE\u6807
 user.icons.table.col.description=\u63CF\u8FF0
 user.icons.table.col.iconpack=\u56FE\u6807\u5305\u7684\u540D\u79F0
 user.icons.table.tab.name=\u7528\u6237\u56FE\u6807
+main.pane.known.issues.title=Known issues
+known.issues.title=<html><br>Up-voting these JetBrains issues would greatly help. Thank you!<br></html>
+known.issue.label1=<html><br><b>IDEA-247819</b>: IntelliJ does not allow folder icons override in Packages View.<br>That means we cannot set custom icons for folders in the Packages View.</html>
+known.issue.label2=<html><br><b>RIDER-101621</b>: Rider IDE does not allow folder icons override in Solution Explorer.<br>That means we cannot set custom icons for folders in the Solution Explorer.</html>
+known.issue.btn1=Visit IDEA-247819 (youtrack.jetbrains.com)
+known.issue.btn2=Visit RIDER-101621 (youtrack.jetbrains.com)
