--- a/src/main/resources/ExtraIconsI18n_zh.properties
+++ b/src/main/resources/ExtraIconsI18n_zh.properties
@@ -148,9 +148,9 @@ uitype.selector.prefer.old=\u603B\u662F\u559C\u6B22\u8001\u7684UI\u56FE\u6807
 user.icons.table.col.description=\u63CF\u8FF0
 user.icons.table.col.iconpack=\u56FE\u6807\u5305\u7684\u540D\u79F0
 user.icons.table.tab.name=\u7528\u6237\u56FE\u6807
-main.pane.known.issues.title=Known issues
-known.issues.title=<html><br>Up-voting these JetBrains issues would greatly help. Thank you!<br></html>
-known.issue.label1=<html><br><b>IDEA-247819</b>: IntelliJ does not allow folder icons override in Packages View.<br>That means we cannot set custom icons for folders in the Packages View.</html>
-known.issue.label2=<html><br><b>RIDER-101621</b>: Rider IDE does not allow folder icons override in Solution Explorer.<br>That means we cannot set custom icons for folders in the Solution Explorer.</html>
-known.issue.btn1=Visit IDEA-247819 (youtrack.jetbrains.com)
-known.issue.btn2=Visit RIDER-101621 (youtrack.jetbrains.com)
+main.pane.known.issues.title=\u5DF2\u77E5\u95EE\u9898
+known.issues.title=<html><br>\u4E3A\u8FD9\u4E9B JetBrains \u95EE\u9898\u5411\u4E0A\u6295\u7968\u5C06\u5927\u6709\u5E2E\u52A9. \u8C22\u8C22!<br></html>
+known.issue.label1=<html><br><b>IDEA-247819</b>: IntelliJ \u4E0D\u5141\u8BB8\u5728 "\u8F6F\u4EF6\u5305\u89C6\u56FE "\u4E2D\u8986\u76D6\u6587\u4EF6\u5939\u56FE\u6807.<br>\u8FD9\u610F\u5473\u7740\u6211\u4EEC\u65E0\u6CD5\u5728\u8F6F\u4EF6\u5305\u89C6\u56FE\u4E2D\u4E3A\u6587\u4EF6\u5939\u8BBE\u7F6E\u81EA\u5B9A\u4E49\u56FE\u6807.</html>
+known.issue.label2=<html><br><b>RIDER-101621</b>: Rider IDE \u4E0D\u5141\u8BB8\u5728\u89E3\u51B3\u65B9\u6848\u8D44\u6E90\u7BA1\u7406\u5668\u4E2D\u8986\u76D6\u6587\u4EF6\u5939\u56FE\u6807.<br>\u8FD9\u610F\u5473\u7740\u6211\u4EEC\u65E0\u6CD5\u5728\u89E3\u51B3\u65B9\u6848\u8D44\u6E90\u7BA1\u7406\u5668\u4E2D\u4E3A\u6587\u4EF6\u5939\u8BBE\u7F6E\u81EA\u5B9A\u4E49\u56FE\u6807.</html>
+known.issue.btn1=\u8BBF\u95EE\u8005 IDEA-247819 (youtrack.jetbrains.com)
+known.issue.btn2=\u8BBF\u95EE\u8005 RIDER-101621 (youtrack.jetbrains.com)
