--- a/src/main/resources/ExtraIconsI18n_zh.properties
+++ b/src/main/resources/ExtraIconsI18n_zh.properties
@@ -151,6 +151,8 @@ user.icons.table.tab.name=\u7528\u6237\u56FE\u6807
 main.pane.known.issues.title=\u5DF2\u77E5\u95EE\u9898
 known.issues.title=<html><br>\u4E3A\u8FD9\u4E9B JetBrains \u95EE\u9898\u5411\u4E0A\u6295\u7968\u5C06\u5927\u6709\u5E2E\u52A9. \u8C22\u8C22!<br></html>
 known.issue.label1=<html><br><b>IDEA-247819</b>: IntelliJ \u4E0D\u5141\u8BB8\u5728 "\u8F6F\u4EF6\u5305\u89C6\u56FE "\u4E2D\u8986\u76D6\u6587\u4EF6\u5939\u56FE\u6807.<br>\u8FD9\u610F\u5473\u7740\u6211\u4EEC\u65E0\u6CD5\u5728\u8F6F\u4EF6\u5305\u89C6\u56FE\u4E2D\u4E3A\u6587\u4EF6\u5939\u8BBE\u7F6E\u81EA\u5B9A\u4E49\u56FE\u6807.</html>
-known.issue.label2=<html><br><b>RIDER-101621</b>: Rider IDE \u4E0D\u5141\u8BB8\u5728\u89E3\u51B3\u65B9\u6848\u8D44\u6E90\u7BA1\u7406\u5668\u4E2D\u8986\u76D6\u6587\u4EF6\u5939\u56FE\u6807.<br>\u8FD9\u610F\u5473\u7740\u6211\u4EEC\u65E0\u6CD5\u5728\u89E3\u51B3\u65B9\u6848\u8D44\u6E90\u7BA1\u7406\u5668\u4E2D\u4E3A\u6587\u4EF6\u5939\u8BBE\u7F6E\u81EA\u5B9A\u4E49\u56FE\u6807.</html>
+known.issue.label2=<html><br><b>IDEA-339254</b><br>IntelliJ IDE \u663E\u793A Java \u5F02\u5E38\u7684\u9ED8\u8BA4\u7C7B\u56FE\u6807\uFF0C\u76F4\u5230\u60A8\u5BF9\u5176\u8FDB\u884C\u4FEE\u6539.<br/>\u60A8\u5FC5\u987B\u4FEE\u6539 Java \u5F02\u5E38\u6587\u4EF6\uFF0C\u624D\u80FD\u770B\u5230\u76F8\u5E94\u7684\u5F02\u5E38\u56FE\u6807.<br/>\u8FD9\u610F\u5473\u7740\u60A8\u65E0\u6CD5\u8F7B\u677E\u770B\u5230\u81EA\u5B9A\u4E49\u7684\u7EA2\u8272 "\u4F8B\u5916 "\u56FE\u6807.</html>
+known.issue.label3=<html><br><b>RIDER-101621</b>: Rider IDE \u4E0D\u5141\u8BB8\u5728\u89E3\u51B3\u65B9\u6848\u8D44\u6E90\u7BA1\u7406\u5668\u4E2D\u8986\u76D6\u6587\u4EF6\u5939\u56FE\u6807.<br>\u8FD9\u610F\u5473\u7740\u6211\u4EEC\u65E0\u6CD5\u5728\u89E3\u51B3\u65B9\u6848\u8D44\u6E90\u7BA1\u7406\u5668\u4E2D\u4E3A\u6587\u4EF6\u5939\u8BBE\u7F6E\u81EA\u5B9A\u4E49\u56FE\u6807.</html>
 known.issue.btn1=\u8BBF\u95EE\u8005 IDEA-247819 (youtrack.jetbrains.com)
-known.issue.btn2=\u8BBF\u95EE\u8005 RIDER-101621 (youtrack.jetbrains.com)
+known.issue.btn2=\u8BBF\u95EE\u8005 IDEA-339254 (youtrack.jetbrains.com)
+known.issue.btn3=\u8BBF\u95EE\u8005 RIDER-101621 (youtrack.jetbrains.com)
