--- a/src/main/resources/ExtraIconsI18n_zh.properties
+++ b/src/main/resources/ExtraIconsI18n_zh.properties
@@ -135,9 +135,9 @@ plugin.icons.table.filter=\u901A\u8FC7\u6B63\u5219\u8868\u8FBE\u5F0F\u6765\u8FC7
 plugin.icons.table.tab.name=\u63D2\u4EF6\u56FE\u6807
 quick.action.label=\u5FEB\u6377\u64CD\u4F5C:
 reset.hints.btn=\u91CD\u7F6E
-reset.hints.success.subtitle=\u9700\u8981\u65F6\uFF0C\u4E0B\u4E00\u9897 IDE \u661F\u4E0A\u4F1A\u51FA\u73B0\u63D0\u793A.
-reset.hints.success.title=\u63D0\u793A\u91CD\u7F6E
-reset.hints.title=\u91CD\u7F6E Extra Icons \u63D0\u793A:
+reset.hints.success.subtitle=\u5982\u6709\u9700\u8981\uFF0CExtra Icons \u63D0\u793A\u548C\u901A\u77E5\u5C06\u5728\u4E0B\u4E00\u6B21\u542F\u52A8 IDE \u65F6\u51FA\u73B0.
+reset.hints.success.title=\u6210\u529F
+reset.hints.title=\u91CD\u7F6E Extra Icons \u63D0\u793A\u548C\u901A\u77E5:
 settings.idelevel.menu=Extra Icons
 settings.projectlevel.menu=Project
 uitype.selector.auto.select=\u81EA\u52A8\u9009\u62E9\u65E7/\u65B0\u7684\u7528\u6237\u754C\u9762\u56FE\u6807
@@ -156,3 +156,6 @@ known.issue.label3=<html><br><b>RIDER-101621</b>: Rider IDE \u4E0D\u5141\u8BB8\u
 known.issue.btn1=\u8BBF\u95EE\u8005 IDEA-247819 (youtrack.jetbrains.com)
 known.issue.btn2=\u8BBF\u95EE\u8005 IDEA-339254 (youtrack.jetbrains.com)
 known.issue.btn3=\u8BBF\u95EE\u8005 RIDER-101621 (youtrack.jetbrains.com)
+notif.tips.lifetime.lic.intro.title=Extra Icons \u7EC8\u8EAB\u8BB8\u53EF\u8BC1
+notif.tips.lifetime.lic.intro.content=<html>Extra Icons \u7EC8\u8EAB\u8BB8\u53EF\u8BC1\u73B0\u5DF2\u63A8\u51FA\uFF1A\u4E00\u6B21\u6027\u652F\u4ED8\u63D2\u4EF6\u8D39\u7528\uFF0C\u5373\u53EF\u7EC8\u8EAB\u4F7F\u7528\u3002\u70B9\u51FB\u4E0B\u9762\u7684\u94FE\u63A5\u83B7\u53D6\u66F4\u591A\u4FE1\u606F\u3002</html>
+notif.tips.lifetime.lic.intro.btn=\u5982\u4F55\u83B7\u5F97\u7EC8\u8EAB\u8BB8\u53EF\u8BC1
