warn about missing license

--- a/src/main/resources/ExtraIconsI18n_zh.properties
+++ b/src/main/resources/ExtraIconsI18n_zh.properties
@@ -160,3 +160,4 @@ notif.tips.lifetime.lic.intro.title=Extra Icons \u7EC8\u8EAB\u8BB8\u53EF\u8BC1
 notif.tips.lifetime.lic.intro.content=<html>Extra Icons \u7EC8\u8EAB\u8BB8\u53EF\u8BC1\u73B0\u5DF2\u63A8\u51FA\uFF1A\u4E00\u6B21\u6027\u652F\u4ED8\u63D2\u4EF6\u8D39\u7528\uFF0C\u5373\u53EF\u7EC8\u8EAB\u4F7F\u7528\u3002\u70B9\u51FB\u4E0B\u9762\u7684\u94FE\u63A5\u83B7\u53D6\u66F4\u591A\u4FE1\u606F\u3002</html>
 notif.tips.lifetime.lic.intro.btn=\u5982\u4F55\u83B7\u5F97\u7EC8\u8EAB\u8BB8\u53EF\u8BC1
 license.required.msg=Extra Icons \u63D2\u4EF6\u9700\u8981\u8BB8\u53EF\u8BC1.
+license.not.found.config.title=<html><b>\u672A\u627E\u5230\u6709\u6548\u7684 Extra Icons \u8BB8\u53EF\u8BC1. \u63D2\u4EF6\u4E0D\u4F1A\u5E94\u7528\u56FE\u6807\u8986\u76D6.</b></html>
